--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.8",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "@types/react-scroll": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
