--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.8",
+    "sass": "^1.56.2",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
