--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
-    "react-scroll": "^1.8.8",
+    "react-icons": "^4.7.1",
+    "react-topbar-progress-indicator": "^4.1.1",
+    "react-typed": "^1.2.0",
     "sass": "^1.56.2",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/react-scroll": "^1.8.5",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
