--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-spring": "^9.7.1",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-typed": "^1.2.0",
     "sass": "^1.56.2",
