--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -19,6 +21,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.7.1",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-typed": "^1.2.0",
@@ -27,6 +30,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/aos": "^3.0.4",
     "@types/react-scroll": "^1.8.5",
     "@types/styled-components": "^5.1.26",
