--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.1",
     "react-topbar-progress-indicator": "^4.1.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
     "@types/aos": "^3.0.4",
+    "@types/react-modal": "^3.16.0",
     "@types/react-scroll": "^1.8.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
